# fritzing-app

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  conanfile.txt
tools/: deploy_fritzing_mac.sh  make.bat  release_fritzing.bat
